[feat](hw5) implemented k-means

--- a/hw5/hw5.ipynb
+++ b/hw5/hw5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 183,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -133,22 +133,56 @@
     "  Output:\n",
     "      clustering label for each data point\n",
     "  \"\"\"\n",
+    "  \n",
+    "  #print(X.shape)\n",
+    "  #print(len(X))\n",
+    "  \n",
     "  assert len(X) > k, 'illegal inputs'\n",
     "  np.random.seed(random_state)\n",
     "\n",
     "  # randomly select k data points as centers\n",
     "  idx = np.random.choice(len(X), k, replace=False)\n",
     "  centers = X[idx]\n",
-    "\n",
+    "  \n",
+    "  #print(idx)\n",
+    "  #print(idx.shape)\n",
+    "  #print(centers[1].shape)\n",
+    "  \n",
     "  # please complete the following code: \n",
     "\n",
     "  from scipy.spatial import distance\n",
+    "  \n",
+    "  labels = np.zeros(len(X))\n",
+    "  #print(centers.shape)\n",
+    "  #print(X.shape)\n",
     "  for i in range(max_iter):\n",
-    "      H = distance.cdist(X, centers, 'euclidean')\n",
-    "      # update clustering labels \n",
-    "      # update new centers\n",
+    "    H = distance.cdist(X, centers, 'euclidean')\n",
+    "    #print(H.shape)\n",
+    "    #print(np.argmin(H, 1))\n",
+    " \n",
+    "    # update clustering labels \n",
+    "    labels = np.argmin(H,1)\n",
     "\n",
+    "    # update new centers\n",
+    "    #print(len(labels))\n",
+    "    #print(range(0, len(labels)))\n",
+    "    sums = np.zeros((k, len(X[0])))\n",
+    "    sizes = np.zeros(k)\n",
+    "    for j in range(0, len(labels)):\n",
+    "      sums[labels[j]] += X[j]\n",
+    "      sizes[labels[j]] += 1\n",
+    "    for j in range(0, k):\n",
+    "      centers[j] = sums[j] / sizes[j]\n",
     "  return labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kmeans(X, k = 4, max_iter = 500);"
    ]
   },
   {
@@ -175,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 185,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -209,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 186,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -217,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -236,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 187,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -244,8 +278,15 @@
    },
    "outputs": [],
    "source": [
-    "# enter your code here"
+    "# enter your code here\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
